--- a/css/components/_all.css
+++ b/css/components/_all.css
@@ -1,3 +1,8 @@
 @import url("./buttons.css");
 @import url("./_menu.css");
-@import url("./_link.css")
+@import url("./_link.css");
+@import url("./call.css");
+@import url("./_about.css");
+@import url("./_baner.css");
+@import url("./_info.css");
+@import url("./_people.css");
